# cc-marketplace

./: .gitignore  CLAUDE.md  prd.md
plugins/claude-md-plugin/core/: Cargo.toml  build.rs
plugins/claude-md-plugin/core/src/: analysis_formatter.rs  auditor.rs  boundary_resolver.rs  bracket_utils.rs  claude_md_parser.rs  claude_md_scanner.rs  code_analyzer.rs  compile_target_resolver.rs  convention_validator.rs  dependency_graph.rs  dependency_resolver.rs  diagram_generator.rs  exports_formatter.rs  implements_md_parser.rs  lib.rs  main.rs  migrator.rs  prompt_validator.rs  schema_validator.rs  signature_converter.rs  symbol_index.rs  tree_parser.rs  tree_utils.rs
plugins/claude-md-plugin/core/src/code_analyzer/: go.rs  java.rs  kotlin.rs  python.rs  rust_lang.rs  typescript.rs
plugins/claude-md-plugin/core/tests/: cucumber.rs
plugins/claude-md-plugin/core/tests/features/: boundary_resolver.feature  claude_md_parser.feature  code_analyze.feature  code_convention.feature  code_generator.feature  compile_target_resolver.feature  compile_test_review_integration.feature  convention_validator.feature  dependency_graph_symbols.feature  developers_md_validator.feature  diagram_component.feature  diagram_state.feature  diagram_unified.feature  diagram_usecase.feature  format_exports.feature  git_hash_cache.feature  migration.feature  prompt_agent_frontmatter.feature  prompt_cross_references.feature  prompt_result_blocks.feature  prompt_skill_frontmatter.feature  prompt_tool_consistency.feature  prompt_uncovered_agents.feature  prompt_uncovered_skills.feature  (+21 more)
(+258 files in other folders)
