[package]
name = "claude-md-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for claude-md-plugin - Tree parsing, boundary resolution, and schema validation"
authors = ["jhk"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
tempfile = "3.9"

[[test]]
name = "cucumber"
harness = false
